# defective-photovoltaic-modules-detection

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
src/scripts/: dataset.py  download.py  vizualization.py
src/scripts/image_processing/: mask.py  mask_adjusters.py  thermograms.py  transformations.py  utils.py
src/scripts/image_processing/mask_adjusters/: expantion_adjuster.py  interface.py  overlap_adjuster.py
src/scripts/image_processing/thermograms/: correction.py  interface.py  tiff_thermogram.py
src/scripts/image_processing/transformations/: histogram_equalization_transformation.py  interface.py  perspective_transformation.py
src/scripts/utils/: dataset.py  vizualization.py
